<resources>
    <string name="app_name">GeoClock</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="location">"Location: "</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="delete_card_confirmation">Delete Card Confirmation</string>
    <string name="delete_card_message">Are you sure you want to delete this card?</string>
    <string name="card_updated">Card updated</string>
    <string name="card_deleted">Card deleted</string>
    <string name="undo">Undo</string>
    <string name="address_not_found">Address not found</string>
    <string name="error_fetching_address">Error fetching address</string>
    <string name="unable_to_fetch_location">Unable to fetch location</string>
    <string name="location_fetch_failed">"Location fetch failed: "</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="login_successful">Login successful</string>
    <string name="registration_successful">Registration successful</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="register_btn">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="login_btn">Login</string>
    <string name="new_user_registration">New user registration</string>
    <string name="manager_dashboard">Manager Dashboard</string>
    <string name="username">Username</string>
    <string name="start_btn">Start</string>
    <string name="logout_btn">Logout</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="are_you_sure_you_want_to_start">Are you sure you want to start?</string>
    <string name="reports">Reports by Date</string>
    <string name="to">To</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="show_cards">Display reports</string>
    <string name="reports_fragment_headline">Set date range for report viewing</string>
    <string name="back">Back</string>
    <string name="separator">-</string>
    <string name="send_reports_via_email">Send reports via email</string>
    <string name="here_are_your_geoclock_reports_from">"Here are your GeoClock reports from "</string>
    <string name="send_email">Send Email</string>
    <string name="please_enter_both_start_and_end_date">Please enter both start and end date</string>
    <string name="geoclock_reports">GeoClock reports</string>
    <string name="emailUser">User:</string>
    <string name="emailDate">Date:</string>
    <string name="emailTime">Time:</string>
    <string name="emailLocation">Location:</string>
    <string name="create_card">Send Location</string>
    <string name="photo">"Photo: "</string>
    <string name="edit_screen">Edit Screen</string>
    <string name="note">Note:</string>
    <string name="add_note">Add Note</string>
    <string name="update">Update</string>
</resources>